# mini-iso

./: .gitignore  1-bus.sh  3-bus.sh  README.md  app.spec  apps.spec  demo_dense.py  demo_marginal.py  install.sh  kkt.py  list-apps.sh  mini-iso.spec  mini-new-england.sh  mini_iso.spec  ne-zones.sh  poetry-to-pip.ps1  pyproject.toml  requirements.txt  run-apps.sh  serve-apps-multi.sh  serve-apps-three-nodes.sh  serve-apps-uni.sh  serve-apps.sh  windows.md
mini_iso/: app.py  apps.py  arrays.py  auction.py  bidders.py  clearance.py  dashboard.py  dataframes.py  demo_stacks.py  miscellaneous.py  offer_stacks.py  offer_stacks_ideal.py  panel_helpers.py  pricer.py  run-apps.sh  typing.py  typing_.py
mini_iso/datasets/: mini-new-england  mini-new-england-multi  mini-new-england-original  mini-new-england-simple  mini-new-england-uni  mini-new-england-uniform  one-zone  three-nodes  three-zones-case2  three-zones-case3  three-zones-case4  two-zones
mini_iso/datasets/expository/: case1.json  case2.json  case3.json  case4.json  generators.csv  lines.case1.csv  lines.case3.csv  lines.case4.csv  offers.csv  zones.case4.csv
mini_iso/datasets/mini_new_england/: __init__.py  generators.csv  lines-original.csv  lines.csv  mini_new_england.json  offers.csv  zones.csv
mini_iso/datasets/mini_new_england_contest/: generators.csv  offers-multi.csv  zones.csv
mini_iso/datasets/mini_new_england_original/: generators.csv  lines.csv  offers.csv  zones.csv
mini_iso/datasets/mini_new_england_uni/: lines.csv  offers-uni.csv  offers.csv  zones.csv
tests/: network_generator.py
(+27 files in other folders)
