[tool.poetry]
name = "mini-iso"
version = "0.1.0"
description = ""
authors = ["Jon Pearce <jonpea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
altair = "^5.3.0"
dask = {extras = ["dataframe"], version = "^2024.4.2"}
gurobipy = "^11.0.1"
hypothesis = "^6.100.2"
ipython = "^8.24.0"
matplotlib = "^3.8.4"
networkx = "^3.3"
pandas = "^2.2.2"
pandera = "^0.18.3"
panel = "^1.4.2"
pydantic = "^2.7.1"
pyinstaller = "^6.6.0"
pytest = "^8.2.0"
scipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
